samples/errors/unbound_variable.opal
;; Error: `result` is never defined
(let double {x} (result (* 2 x)))
